# ruberdoku

./: .coverage  .gitignore  .pre-commit-config.yaml  LICENSE.txt  Makefile  check_version.sh  coverage.xml  pyproject.toml  report.xml  tox.ini
.codspeed/: results_1733666425885.json  results_1733666856715.json  results_1733666944208.json  results_1733666968253.json
.github/workflows/: check_version.yml  codspeed.yml  publish.yml  test.yml  type_and_lint.yml  unit_tests.yml
src/ruberdoku/: cli.py  game_loop.py  main.py  menu.py  sudoku.py
tests/: test_sudoku_class.py
tests/benchmarks/: test_benchmark_sudoku_class.py
