[tool.poetry]
name = "ruberdoku"
version = "0.0.1"
description = ""
authors = ["Tjark Sievers <tjarksievers@icloud.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.scripts]
ruberdoku = "ruberdoku.cli:cli"

[tool.poetry.dependencies]
python = ">=3.9"
click = "^8.1.7"

[tool.poetry.group.dev.dependencies]
pre-commit = "^3.7.1"
scriv = "^1.5.1"
tox = "^4.15.0"
black = "^24.4.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
