[project]
name = "ruberdoku"
version = "0.0.1"
description = ""
authors = [{name="Tjark Sievers", email="tjarksievers@icloud.com"}]
license = "MIT"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "click>=8.1.7",
]

[project.scripts]
ruberdoku = "ruberdoku.cli:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pre-commit>=4.0.1",
    "pytest>=8.3.4",
    "scriv>=1.5.1",
    "tox>=4.23.2",
]
test = [
    "pytest-integration>=0.2.3",
    "pytest-cov>=6.0.0",
    "pytest>=8.3.4",
]
lint = [
    "ruff>=0.8.2",
]
type = [
    "mypy>=1.13.0",
]
